# bkms-edu2sql

./: .env.example  .gitignore  README.md  environment.yml  pyproject.toml  streamlit_app.py  test_agent_graph_chat.py  test_agent_interactive.py  test_agent_real_chat.py
config/: default.yaml
data/: clarification_rules.json  query_examples.json  schema_dictionary.json
docs/: lms_database_schema_spec.md  nl2sql_agent_flow_and_clarification.md  nl2sql_agent_implementation_spec.md
scripts/: seed_poc_postgres.py
src/edu2sql/: __init__.py  agent.py  agent_graph.py  config.py  db.py  retriever.py  sql_validator.py
tests/: test_agent_flow.py  test_config.py
